Creación de componente para guardar en base de datos el libro encontrado, en construcción. Ahora mismo el sistema no está disponible, requiere más construcción, para restaurarlo.